--- a/css/small5.css
+++ b/css/small5.css
@@ -44,3 +44,28 @@
     margin-top: 0px;
     margin-bottom: 300px;
 }
+.sshareoptsdiv{
+    animation-name: sharedivanim;
+    animation-duration: 0.3s;
+}
+@keyframes sharedivanim {
+    0%{
+        transform:rotate(270deg) ;
+        transform-origin:bottom left;
+        animation-timing-function: ease-in-out; 
+    }
+    33%{
+        transform:rotate(360deg) ;
+        transform-origin:bottom left;
+        animation-timing-function: ease-in-out; 
+    }
+    66%{
+        transform:rotate(340deg) ;
+        transform-origin:bottom left;
+        animation-timing-function: ease-in-out; 
+    }
+    100%{
+        transform: rotate(360deg);
+        animation-timing-function: ease-in-out; 
+    }
+}
