--- a/css/style.css
+++ b/css/style.css
@@ -291,7 +291,7 @@ body{
     height: 75px;
     display: flex;
     justify-content: flex-end;
-    border-bottom: 2px solid white;
+    border-bottom: 4px solid white;
 }
 .closeleftwindow i{
     margin-right: 10px;
@@ -313,7 +313,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    border-bottom: 1px solid #817575;
+    border-bottom: 2px solid #c3bbbb;
 }
 .leftwinopts:hover{
     cursor: pointer;
