--- a/css/style.css
+++ b/css/style.css
@@ -67,13 +67,13 @@ body{
     border: 1px solid black;
     background-color: #2196f3;
     margin-top: 2px;
-    display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .panelcolorsdiv{
     height: 100%;
+    display: flex;
     display: none;
     width: 150px;
     animation-name: openpanel;
@@ -82,6 +82,8 @@ body{
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 6px;
     border-top-right-radius: 6px;
+    flex-direction: column;
+    align-items: center;
 }
 @keyframes openpanel {
     0%{
@@ -109,7 +111,6 @@ body{
 .panelcolors{
     border: 1px solid transparent;
     margin:12px;
-    height: 207px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -123,12 +124,16 @@ body{
     border: 1px solid #8c7b7b;
     margin: 0 9px 7px 1px;
     display: flex;
+    /* cursor: url("../img/curcolorpicker.png"), auto; */
+    /* cursor: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/9632/happy.png"), auto; */
 }
 .spcolor input[type=radio] {
     opacity: 0;
     width: 23px;
     height: 23px;
     margin-left: 2px;
+    /* cursor: url("../img/curcolorpicker.png"), auto; */
+    /* cursor: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/9632/happy.png"), auto; */
 }
 .spcolor input[type=radio]:hover {
     cursor: pointer;
@@ -150,11 +155,12 @@ body{
     background-color: #ecec0d;
 }
 #color4{
-    background-color: #27ff00;
+    background-color: #37b182;
 }
 #color5{
-    background-color: orange;
+    background-color: #ff7600;
 }
+
 /* Theme colors panel END */
 /* Feedback div START */
 
@@ -378,6 +384,59 @@ body{
     margin-left: 16px;
     font-size: 19px;
 }
+/* Drawer for online programming ratings */
+.overlayfull{
+    display: none;
+    width: 100%;
+    height: 100%;
+    background-color: #0000007a;
+    position: fixed;
+    z-index: 2;
+}
+.rightsidediv{
+    position: fixed;
+    /* border: 1px solid red; */
+    z-index: 4;
+    width: 90%;
+    height: 90%;
+    right: 0;
+    top: 5%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    transform: translateX(93%);
+    transition: 1s all ease-out;
+}
+.rightdivbtn{
+    background: red;
+    width: 180px;
+    height: 35px;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: rotate(270deg);
+    float: right;
+}
+.rightdivbtn:hover{
+    cursor: pointer;
+}
+.rightdivbtn p{
+    font-size: 18px;
+    font-weight: bold;
+    color: wheat;
+}
+.rightdrawdiv{
+    /* display: none; */
+    border: 1px solid red;
+    background-color: antiquewhite;
+    width: 100%;
+    height: 100%;
+    margin-left: -66px;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+}
 
 /* Right tab */
 .righttab{
@@ -466,9 +525,11 @@ body{
     box-shadow: 0px 3px 5px 1px #aab4be;
     background:white;
     border-radius: 5px;
+    transition: all 0.2s ease;
 }
 .prs:hover,.prshid :hover{
     transform: scale(1.04);
+    backface-visibility: hidden;
 }
 .prgif{
     height: 220px;
@@ -501,13 +562,15 @@ body{
 }
 .proptions{
     display: flex;
-    width: 20px;
+    width: 32px;
     align-items: center;
-    height: 24px;
+    height: 32px;
     justify-content: center;
+    border-radius: 50%;
 }
 .proptions:hover{
     cursor: pointer;
+    background-color: #f1f1f1;
 }
 .prdisc{
     padding: 10px;
@@ -521,7 +584,7 @@ body{
     background-color: rgb(252, 251, 250);
     position: relative;
     animation-name: prshidslide;
-    animation-duration: 0.1s;
+    animation-duration: 0.2s;
 }
 @keyframes prshidslide {
     0%   {left:0px; top:100px; height: 100%;}
@@ -561,7 +624,7 @@ body{
     justify-content: center;
     align-items: center;
     color: white;
-    background-color: black;
+    background-color: rgb(33, 150, 243);
     width: 58px;
     height: 58px;
     font-size: 25px;
@@ -868,6 +931,7 @@ body{
     display: flex;
     align-items: center;
     flex-direction: column;
+    transition: all 0.2s ease;
 }
 .sharelinkdiv:hover{
     transform: scale(1.05);
