--- a/css/style.css
+++ b/css/style.css
@@ -371,7 +371,7 @@ body{
 .navdiv:hover{
     cursor: pointer;
     background-color: rgb(243, 242, 242);
-    border-left: 3px solid blue;
+    /* border-left: 3px solid blue; */
 }
 .navdiv:active{
     background-color: rgb(228, 228, 228);
